Add. html skeleton code

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,102 @@
     <title>Shopping</title>
   </head>
   <body>
-    <h1>hello</h1>
+    <header>
+      <div class="header__logo">logo</div>
+      <div class="header__search">
+        <form>
+          <input type="text" name="search" />
+          <!-- <ul class="placeholder-list" >
+              <li class="placeholder-item"></li>
+              <li class="placeholder-item"></li>
+              <li class="placeholder-item"></li>
+              <li class="placeholder-item"></li>
+              <li class="placeholder-item"></li>
+              <li class="placeholder-item"></li>
+              <li class="placeholder-item"></li>
+              <li class="placeholder-item"></li>
+              <li class="placeholder-item"></li>
+              <li class="placeholder-item"></li>
+          </ul> -->
+          <button type="submit">돋보기</button>
+        </form>
+      </div>
+    </header>
+    <nav>
+      <div class="nav__column">
+        <div class="nav__category">
+          <div class="category-btn">버튼</div>
+          <div class="category-title">카테고리</div>
+        </div>
+      </div>
+      <span class="divider"></span>
+      <div class="nav__column">
+        <ul class="nav__event-list">
+          <li class="event-itme"><a href="#">핫딜</a></li>
+          <li class="event-itme"><a href="#">베스트 100</a></li>
+          <li class="event-itme"><a href="#">할인특가</a></li>
+          <li class="event-itme"><a href="#">기획전</a></li>
+        </ul>
+      </div>
+      <span class="divider"></span>
+      <div class="nav__column">
+        <ul class="nav__tag-list">
+          <li class="tag-item"><a href="#">#수능 선물</a></li>
+          <li class="tag-item"><a href="#">#김치냉장고</a></li>
+          <li class="tag-item"><a href="#">#복합 가습기</a></li>
+          <li class="tag-item"><a href="#">#구스다운</a></li>
+          <li class="tag-item"><a href="#">#운수매트</a></li>
+        </ul>
+      </div>
+      <div class="nav__column">
+        <div class="nav__user-container">
+          <div class="nav-user__column">
+            <a href="#">
+              <div class="user-icon">I사람</div>
+              <div class="user-icon__name">MY 쇼핑</div>
+            </a>
+          </div>
+          <div class="nav-user__column">
+            <a href="#">
+              <div class="user-icon">I박스</div>
+              <div class="user-icon__name">최근본 상품</div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <main>
+      <div class="main__column banner">
+        <div class="banner__column">
+          <div class="banner-item"></div>
+          <div class="banner-item">
+            <ul class="event-item-list">
+              <li class="production event-item">
+                <a href="">
+                  <div class="item-img">이미지</div>
+                  <div class="item-title">아이템 제목</div>
+                  <div class="item-info">아이템 info</div>
+                  <div class="item-theme">아이템 테마</div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="banner__column"></div>
+      </div>
+      <div class="main__column hot-theme">
+        <h3 class="hot-theme-title">품절주의! 역대급 핫딜</h3>
+        <ul class="hot-theme-list">
+          <li class="production hot-theme-item">
+            <a href="">
+              <div class="item-img">이미지</div>
+              <div class="item-title">아이템 제목</div>
+              <div class="item-info">아이템 info</div>
+              <div class="item-theme">아이템 테마</div>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
