Add. scss사용하기 위한 parcel

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopping</title>
+    <!-- <link rel="stylesheet" href="src/css/styles.css" /> -->
+    <link rel="stylesheet" href="src/css/main.scss" />
   </head>
   <body>
     <header>
