Add. Header style

--- a/public/index.html
+++ b/public/index.html
@@ -4,28 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopping</title>
-    <!-- <link rel="stylesheet" href="src/css/styles.css" /> -->
-    <link rel="stylesheet" href="src/css/main.scss" />
+    <link rel="stylesheet" href="src/css/styles.scss" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
+      integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <header>
-      <div class="header__logo">logo</div>
+      <div class="header__logo">
+        <img src="//search1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/logo_shw.png" />
+      </div>
       <div class="header__search">
         <form>
-          <input type="text" name="search" />
-          <!-- <ul class="placeholder-list" >
-              <li class="placeholder-item"></li>
-              <li class="placeholder-item"></li>
-              <li class="placeholder-item"></li>
-              <li class="placeholder-item"></li>
-              <li class="placeholder-item"></li>
-              <li class="placeholder-item"></li>
-              <li class="placeholder-item"></li>
-              <li class="placeholder-item"></li>
-              <li class="placeholder-item"></li>
-              <li class="placeholder-item"></li>
-          </ul> -->
-          <button type="submit">돋보기</button>
+          <div class="box_search">
+            <input type="text" name="search" placeholder="검색어를 입력하세요" />
+            <!-- <ul class="placeholder-list" >
+                <li class="placeholder-item"></li>
+                <li class="placeholder-item"></li>
+                <li class="placeholder-item"></li>
+                <li class="placeholder-item"></li>
+                <li class="placeholder-item"></li>
+                <li class="placeholder-item"></li>
+                <li class="placeholder-item"></li>
+                <li class="placeholder-item"></li>
+                <li class="placeholder-item"></li>
+                <li class="placeholder-item"></li>
+            </ul> -->
+            <button type="submit"><i class="fas fa-search"></i></button>
+          </div>
         </form>
       </div>
     </header>
