--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c3d44d5c03.js" crossorigin="anonymous"></script>
-    <script src="src/main.js" defer></script>
+    <script src="main.js" defer></script>
     <title>fe-w3-shopping</title>
 </head>
 <body>
     <h1>djifwjifjwiejfowijfo</h1>
+    <p>djifjwojfoiwjfijeqwifjsnsa</p>
 </body>
 </html>
