--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>쇼핑하우 by swing</title>
-    <link rel="stylesheet" href="./css/sample.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <h1>Hello ! This is express-server sample page</h1>
