chore: html markup 기본틀 작성

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,173 @@
     <title>fe-w3-shopping</title>
 </head>
 <body>
-    <h1>djifwjifjwiejfowijfo</h1>
-    <p>djifjwojfoiwjfijeqwifjsnsa</p>
+    <header>
+        <ul class="header__logo">
+            <li class="logo__name"></li>
+            <li class="logo__desc"></li>
+        </ul>
+        <div class="header__input">
+            <input type="text" class="main__input">
+        </div>
+        <nav>
+            <div class="nav__category">카테고리</div>
+            <ul class="special-menu">
+                <li class="special-menu__list">핫딜</li>
+                <li class="special-menu__list">베스트100</li>
+                <li class="special-menu__list">할인특가</li>
+                <li class="special-menu__list">기획전</li>
+            </ul>
+            <ul class="hash-tag">
+                <li class="hash-tag__list">#수능 선물</li>
+                <li class="hash-tag__list">#김치냉장고</li>
+                <li class="hash-tag__list">#복합 가습기</li>
+                <li class="hash-tag__list">#구스다운</li>
+                <li class="hash-tag__list">#온수매트</li>
+            </ul>
+            <div class="add-on">
+                <ul class="add-on__login">
+                    <li class="login__icon"></li>
+                    <li class="login__desc">로그인</li>
+                </ul>
+                <ul class="add-on__recent-product">
+                    <li class="recent-product__icon"></li>
+                    <li class="recent-product__desc">최근본상품</li>
+                    <li class="recent-product__toggle"></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <div class="main-banner">
+        <div class="main-banner__static">
+            <ul class="static__text">
+                <li class="static__text__button">BEST 100</li>
+                <li class="static__text__title">패션 베스트</li>
+                <li class="static__text__underbar"></li>
+                <li class="static__text__desc">올겨울 여성 코디 제안<br>지금 제일 인기있는 스타일만 모아봤어요</li>
+            </ul>
+            <div class="static__img"></div>
+        </div>
+        <div class="main-banner__slide">
+            <ul class="slide__text">
+                <li class="slide__text__button">기획전</li>
+                <li class="slide__text__title">커피메이커</li>
+                <li class="slide__text__underbar"></li>
+                <li class="slide__text__desc">24시 홈카페 오픈!<br>가족과 함께 여유롭게 커피 한잔 어때요?</li>
+            </ul>
+            <div class="slide__img"></div>
+        </div>
+    </div>
+    <div class="sub-menu">
+        <div class="sub-menu__silde">
+            <ul class="sub-slide">
+                <li class="sub-slide__img"></li>
+                <li class="sub-slide__title"></li>
+                <li class="sub-slide__desc"></li>
+                <li class="sub-slide__theme"></li>
+            </ul>
+            <ul class="sub-slide">
+                <li class="sub-slide__img"></li>
+                <li class="sub-slide__title"></li>
+                <li class="sub-slide__desc"></li>
+                <li class="sub-slide__theme"></li>
+            </ul>
+            <ul class="sub-slide">
+                <li class="sub-slide__img"></li>
+                <li class="sub-slide__title"></li>
+                <li class="sub-slide__desc"></li>
+                <li class="sub-slide__theme"></li>
+            </ul>
+            <ul class="sub-slide">
+                <li class="sub-slide__img"></li>
+                <li class="sub-slide__title"></li>
+                <li class="sub-slide__desc"></li>
+                <li class="sub-slide__theme"></li>
+            </ul>
+            <ul class="sub-slide">
+                <li class="sub-slide__img"></li>
+                <li class="sub-slide__title"></li>
+                <li class="sub-slide__desc"></li>
+                <li class="sub-slide__theme"></li>
+            </ul>
+            <ul class="sub-slide">
+                <li class="sub-slide__img"></li>
+                <li class="sub-slide__title"></li>
+                <li class="sub-slide__desc"></li>
+                <li class="sub-slide__theme"></li>
+            </ul>
+            <ul class="sub-slide">
+                <li class="sub-slide__img"></li>
+                <li class="sub-slide__title"></li>
+                <li class="sub-slide__desc"></li>
+                <li class="sub-slide__theme"></li>
+            </ul>
+        </div>
+        <div class="sub-menu__more">더보기</div>
+    </div>
+    <div class="issue-banner">
+        <div class="issue-banner__title">지금뜨는 테마 카테고리</div>
+        <div class="issue-banner__slide">
+            <ul class="issue-slide">
+                <li class="issue-slide__img"></li>
+                <li class="issue-slide__title"></li>
+                <li class="issue-slide__desc"></li>
+                <li class="issue-slide__theme"></li>
+            </ul>
+            <ul class="issue-slide">
+                <li class="issue-slide__img"></li>
+                <li class="issue-slide__title"></li>
+                <li class="issue-slide__desc"></li>
+                <li class="issue-slide__theme"></li>
+            </ul>
+            <ul class="issue-slide">
+                <li class="issue-slide__img"></li>
+                <li class="issue-slide__title"></li>
+                <li class="issue-slide__desc"></li>
+                <li class="issue-slide__theme"></li>
+            </ul>
+            <ul class="issue-slide">
+                <li class="issue-slide__img"></li>
+                <li class="issue-slide__title"></li>
+                <li class="issue-slide__desc"></li>
+                <li class="issue-slide__theme"></li>
+            </ul>
+            <ul class="issue-slide">
+                <li class="issue-slide__img"></li>
+                <li class="issue-slide__title"></li>
+                <li class="issue-slide__desc"></li>
+                <li class="issue-slide__theme"></li>
+            </ul>
+            <ul class="issue-slide">
+                <li class="issue-slide__img"></li>
+                <li class="issue-slide__title"></li>
+                <li class="issue-slide__desc"></li>
+                <li class="issue-slide__theme"></li>
+            </ul>
+            <ul class="issue-slide">
+                <li class="issue-slide__img"></li>
+                <li class="issue-slide__title"></li>
+                <li class="issue-slide__desc"></li>
+                <li class="issue-slide__theme"></li>
+            </ul>
+            <ul class="issue-slide">
+                <li class="issue-slide__img"></li>
+                <li class="issue-slide__title"></li>
+                <li class="issue-slide__desc"></li>
+                <li class="issue-slide__theme"></li>
+            </ul>
+            <ul class="issue-slide">
+                <li class="issue-slide__img"></li>
+                <li class="issue-slide__title"></li>
+                <li class="issue-slide__desc"></li>
+                <li class="issue-slide__theme"></li>
+            </ul>
+            <ul class="issue-slide">
+                <li class="issue-slide__img"></li>
+                <li class="issue-slide__title"></li>
+                <li class="issue-slide__desc"></li>
+                <li class="issue-slide__theme"></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
