special-section html header 수정

--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
   <link rel='stylesheet' type='text/css' media='screen' href='main.scss'>
 </head>
 <body>
-  <header>
-    <div class="col-12">
+  <header class="col-10">
+    <div class="col-10 row-search">
       <div class="logo">
         <img class="logo__img" src="./images/logo.png" alt="쇼핑하우" title="쇼핑하우 로고">
       </div>
       <div class="search-bar">
         <input class="search-bar__input">
         <button class="search-bar__button" id="searchButton">
-          <img class="search-bar__button__image" src="./images/ico.png" alt="검색 버튼" title="검색 버튼 이미지">
+          <span class="search-bar__button__image-span">
         </button>
       </div>
     </div>
-    <div class="col-12">
+    <div class="col-10 row-nav">
       <div class="col-1">
         <button class="category-button">
-          <img class="category-button__image" src="./images/ico.png" alt="카테고리 열기" title="카테고리 버튼 이미지">
+          <span class="category-button__image-span">
           <span class="category-button__text">카테고리</span>
         </button>
       </div>
-      <div class="col-8">
+      <div class="col-6">
         <ul class="header-list">
           <li>핫딜</li>
           <li>베스트100</li>
@@ -37,18 +37,18 @@
       </div>
       <div class="col-3">
         <div class="login-button">
-          <img class="login-button__image" src="./images/ico.png" alt="로그인" title="로그인 버튼 이미지">
+          <img class="login-button__image-span">
           <span class="login-button__text">로그인</span>
         </div>
         <div class="recently-button">
-          <img class="recently-button__image" src="./images/ico.png" alt="최근본 상품" title="최근본 상품 버튼 이미지">
+          <img class="recently-button__span">
           <span class="recently-button__text">최근본 상품</span>
         </div>
       </div>
     </div>
   </header>
   <main>
-    <section class="special-section">
+    <section class="col-10 special-section">
       <div class="col-4 carousel-none">
         <a class="carousel__item">
           <img src="images/m1.png">
@@ -65,7 +65,7 @@
           <img src="images/c3.png">
         </a>
       </div>
-      <div class="box grid-five">
+      <div class="col-10 box grid-five">
         <a class="box__item" href="">
           <img class="box__item__img" src="./images/more-test.jpg" alt="">
           <span class="box__item__title">바비브라운 브랜드전</span>
@@ -100,6 +100,6 @@
     </section>
 
   </main>
-  <script src='main.js'></script>
+  <!-- <script src='main.js'></script> -->
 </body>
 </html>
