--- a/public/index.html
+++ b/public/index.html
@@ -38,24 +38,20 @@
         </form>
       </div>
     </header>
-    <nav>
-      <div class="nav__column">
+    <div class="nav-container">
+      <nav>
         <div class="nav__category">
-          <div class="category-btn">버튼</div>
+          <div class="category-btn"><i class="fas fa-bars"></i></div>
           <div class="category-title">카테고리</div>
         </div>
-      </div>
-      <span class="divider"></span>
-      <div class="nav__column">
+        <span class="divider"></span>
         <ul class="nav__event-list">
           <li class="event-itme"><a href="#">핫딜</a></li>
           <li class="event-itme"><a href="#">베스트 100</a></li>
           <li class="event-itme"><a href="#">할인특가</a></li>
           <li class="event-itme"><a href="#">기획전</a></li>
         </ul>
-      </div>
-      <span class="divider"></span>
-      <div class="nav__column">
+        <span class="divider"></span>
         <ul class="nav__tag-list">
           <li class="tag-item"><a href="#">#수능 선물</a></li>
           <li class="tag-item"><a href="#">#김치냉장고</a></li>
@@ -63,24 +59,25 @@
           <li class="tag-item"><a href="#">#구스다운</a></li>
           <li class="tag-item"><a href="#">#운수매트</a></li>
         </ul>
-      </div>
-      <div class="nav__column">
         <div class="nav__user-container">
           <div class="nav-user__column">
             <a href="#">
-              <div class="user-icon">I사람</div>
+              <div class="user-icon"><i class="far fa-user"></i></div>
               <div class="user-icon__name">MY 쇼핑</div>
             </a>
           </div>
           <div class="nav-user__column">
             <a href="#">
-              <div class="user-icon">I박스</div>
+              <div class="user-icon"><i class="far fa-window-restore"></i></div>
               <div class="user-icon__name">최근본 상품</div>
+              <div class="user-icon__more">
+                <i class="fas fa-caret-down"></i>
+              </div>
             </a>
           </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
     <main>
       <div class="main__column banner">
         <div class="banner__column">
