--- a/public/index.html
+++ b/public/index.html
@@ -38,64 +38,72 @@
         </form>
       </div>
     </header>
-    <div class="nav-container">
-      <nav>
-        <div class="nav__category">
-          <div class="category-btn"><i class="fas fa-bars"></i></div>
-          <div class="category-title">카테고리</div>
+    <nav>
+      <div class="nav__category">
+        <div class="category-btn"><i class="fas fa-bars"></i></div>
+        <div class="category-title">카테고리</div>
+      </div>
+      <span class="divider"></span>
+      <ul class="nav__event-list">
+        <li class="event-itme"><a href="#">핫딜</a></li>
+        <li class="event-itme"><a href="#">베스트 100</a></li>
+        <li class="event-itme"><a href="#">할인특가</a></li>
+        <li class="event-itme"><a href="#">기획전</a></li>
+      </ul>
+      <span class="divider"></span>
+      <ul class="nav__tag-list">
+        <li class="tag-item"><a href="#">#수능 선물</a></li>
+        <li class="tag-item"><a href="#">#김치냉장고</a></li>
+        <li class="tag-item"><a href="#">#복합 가습기</a></li>
+        <li class="tag-item"><a href="#">#구스다운</a></li>
+        <li class="tag-item"><a href="#">#운수매트</a></li>
+      </ul>
+      <div class="nav__user-container">
+        <div class="nav-user__column">
+          <a href="#">
+            <div class="user-icon"><i class="far fa-user"></i></div>
+            <div class="user-icon__name">MY 쇼핑</div>
+          </a>
         </div>
-        <span class="divider"></span>
-        <ul class="nav__event-list">
-          <li class="event-itme"><a href="#">핫딜</a></li>
-          <li class="event-itme"><a href="#">베스트 100</a></li>
-          <li class="event-itme"><a href="#">할인특가</a></li>
-          <li class="event-itme"><a href="#">기획전</a></li>
-        </ul>
-        <span class="divider"></span>
-        <ul class="nav__tag-list">
-          <li class="tag-item"><a href="#">#수능 선물</a></li>
-          <li class="tag-item"><a href="#">#김치냉장고</a></li>
-          <li class="tag-item"><a href="#">#복합 가습기</a></li>
-          <li class="tag-item"><a href="#">#구스다운</a></li>
-          <li class="tag-item"><a href="#">#운수매트</a></li>
-        </ul>
-        <div class="nav__user-container">
-          <div class="nav-user__column">
-            <a href="#">
-              <div class="user-icon"><i class="far fa-user"></i></div>
-              <div class="user-icon__name">MY 쇼핑</div>
-            </a>
-          </div>
-          <div class="nav-user__column">
-            <a href="#">
-              <div class="user-icon"><i class="far fa-window-restore"></i></div>
-              <div class="user-icon__name">최근본 상품</div>
-              <div class="user-icon__more">
-                <i class="fas fa-caret-down"></i>
-              </div>
-            </a>
-          </div>
+        <div class="nav-user__column">
+          <a href="#">
+            <div class="user-icon"><i class="far fa-window-restore"></i></div>
+            <div class="user-icon__name">최근본 상품</div>
+            <div class="user-icon__more">
+              <i class="fas fa-caret-down"></i>
+            </div>
+          </a>
         </div>
-      </nav>
-    </div>
+      </div>
+    </nav>
     <main>
       <div class="main__column banner">
         <div class="banner__column">
-          <div class="banner-item"></div>
-          <div class="banner-item">
-            <ul class="event-item-list">
-              <li class="production event-item">
-                <a href="">
-                  <div class="item-img">이미지</div>
-                  <div class="item-title">아이템 제목</div>
-                  <div class="item-info">아이템 info</div>
-                  <div class="item-theme">아이템 테마</div>
-                </a>
-              </li>
-            </ul>
+          <div class="banner-event">
+            <div class="banner-event__type">Best 100</div>
+            <div class="banner-event__img">기본형</div>
+            <div class="banner-event__title">홈인테리어 베스트</div>
+            <div class="banner-event__info">~~~~</div>
+          </div>
+          <div class="banner-list slide">
+            <div class="banner-item__type">Best 100</div>
+            <div class="banner-item__img">슬라이드</div>
+            <div class="banner-item__title">홈인테리어 베스트</div>
+            <div class="banner-item__info">~~~~</div>
           </div>
         </div>
-        <div class="banner__column"></div>
+        <div class="banner__column">
+          <ul class="event-item-list">
+            <li class="production event-item">
+              <a href="">
+                <div class="item-img">이미지</div>
+                <div class="item-title">아이템 제목</div>
+                <div class="item-info">아이템 info</div>
+                <div class="item-theme">아이템 테마</div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="main__column hot-theme">
         <h3 class="hot-theme-title">품절주의! 역대급 핫딜</h3>
