--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.scss" />
+    <link rel="stylesheet" href="style.scss" />
   </head>
   <body>
-    <div class="wrap">
+
       <div class="head">
          <div class="area_headtop">
             <div class="banner">
@@ -19,10 +19,10 @@
             <div class="search">
                <form action="" role="search" class="search_form">
                   <div class="search_box">
-                     <input type="text" class="search_input">
+                     <input type="text" class="search_input"/>
                      <button type="submit" class="search_btn">
                         <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
-                           style="display:block;fill:rgba(0,0,0,1);height:16px;width:16px;stroke:rgba(0,0,0,1);stroke-width:4;overflow:visible"
+                           style="display:block;fill:#f9624c;height:1.5rem;width:1.5rem;stroke:#f9624c;stroke-width:4;overflow:visible"
                            aria-hidden="true" role="presentation" focusable="false">
                            <g fill="none">
                               <path
@@ -35,55 +35,58 @@
                </form>
             </div>
          </div>
-         <div class="navigator">
-            <div class="category">
-               <div>
-                  <img src="/public/img/list.png" alt="">
+         <div class="navigator wrap">
+            <div class="nav_left">
+               <div class="category">
+                  <div>
+                     <img src="/public/img/list.png" class="btn_icon" alt="category">
+                     카테고리
+                  </div>
                </div>
-               <div>카테고리</div>
+               <span class="txt_bar">txt_bar</span>
+               <ul class="nav_menu">
+                  <li>
+                     <a href="#">핫딜</a>
+                  </li>
+                  <li>
+                     <a href="#">베스트100</a>
+                  </li>
+                  <li>
+                     <a href="#">
+                        할인특가
+                        <span class="update">new</span>
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#">기획전</a>
+                  </li>
+               </ul>
+               <span class="txt_bar">txt_bar</span>
+               <ul class="nav_special_menu">
+                  <li>
+                     <a href="#">#건강식품</a>
+                  </li>
+                  <li>
+                     <a href="#">#제철음식</a>
+                  </li>
+                  <li>
+                     <a href="#">#블루투스이어폰</a>
+                  </li>
+                  <li>
+                     <a href="#">#커블체어</a>
+                  </li>
+                  <li>
+                     <a href="#">   
+                        #노트북
+                        <span class="update">new</span>
+                     </a>
+                  </li>
+               </ul>
             </div>
-            <span class="txt_bar">txt_bar</span>
-            <ul class="nav_menu">
-               <li>
-                  <a href="#">핫딜</a>
-               </li>
-               <li>
-                  <a href="#">베스트100</a>
-               </li>
-               <li>
-                  <a href="#">
-                     <span class="update">new</span>
-                     할인특가
-                  </a>
-               </li>
-               <li>
-                  <a href="#">기획전</a>
-               </li>
-            </ul>
-            <span class="txt_bar">txt_bar</span>
-            <ul class="nav_special_menu">
-               <li>
-                  <a href="#">#건강식품</a>
-               </li>
-               <li>
-                  <a href="#">#제철음식</a>
-               </li>
-               <li>
-                  <a href="#">#블루투스이어폰</a>
-               </li>
-               <li>
-                  <a href="#">#커블체어</a>
-               </li>
-               <li>
-                  <a href="#">
-                     <span class="update">new</span>
-                     #노트북</a>
-               </li>
-            </ul>
-            <div class="nav_user_menu">
+            <div class="nav_right nav_user_menu">
                <ul>
-                  <li><img src="/public/img/user.png" alt=""><a href="#">로그인</a></li>
-                  <li><img src="/public/img/history.png" alt=""><a href="#">최근본 상품</a></li>
+                  <li><img class="btn_icon" src="/public/img/user.png" alt=""><a href="#">로그인</a></li>
+                  <li><img class="btn_icon" src="/public/img/history.png" alt=""><a href="#">최근본 상품</a></li>
                </ul>
             </div>
          </div>
@@ -114,6 +117,6 @@
          </div>
          <div class="section_hot_deal"></div>
       </div>
-   </div>
+
   </body>
 </html>
