--- a/index.html
+++ b/index.html
@@ -21,33 +21,27 @@
       </div>
     </div>
     <div class="col-10 row-nav">
-      <div class="col-1">
-        <button class="category-button">
-          <span class="category-button__image-span">
-          <span class="category-button__text">카테고리</span>
-        </button>
-      </div>
-      <div class="col-6">
-        <ul class="header-list">
-          <li>핫딜</li>
-          <li>베스트100</li>
-          <li class="new">할인특가</li>
-          <li>기획전</li>
-        </ul>
-      </div>
-      <div class="col-3">
-        <div class="login-button">
-          <img class="login-button__image-span">
-          <span class="login-button__text">로그인</span>
-        </div>
-        <div class="recently-button">
-          <img class="recently-button__span">
-          <span class="recently-button__text">최근본 상품</span>
-        </div>
-      </div>
+      <button class="col-1 category-button">
+        <span class="category-button__image-span"></span>
+        <span class="category-button__text">카테고리</span>
+      </button>
+      <ul class="col-7 header-list">
+        <li>핫딜</li>
+        <li>베스트100</li>
+        <li class="new">할인특가</li>
+        <li>기획전</li>
+      </ul>
+      <button class="col-1 login-button">
+        <img class="login-button__image-span">
+        <span class="login-button__text">로그인</span>
+      </button>
+      <button class="col-1 recently-button">
+        <img class="recently-button__image-span">
+        <span class="recently-button__text">최근본 상품</span>
+      </button>
     </div>
   </header>
-  <main>
+  <main class="col-10">
     <section class="col-10 special-section">
       <div class="col-4 carousel-none">
         <a class="carousel__item">
@@ -55,50 +49,100 @@
         </a>
       </div>
       <div class="col-6 carousel">
-        <a class="carousel__item">
-          <img src="images/c1.png">
-        </a>
-        <a class="carousel__item">
-          <img src="images/c2.png">
-        </a>
-        <a class="carousel__item">
-          <img src="images/c3.png">
-        </a>
+        <div class="carousel-box">
+          <div class="panel">
+            <a class="panel__item">
+              <img src="images/c1.png">
+            </a>
+            <a class="panel__item">
+              <img src="images/c2.png">
+            </a>
+            <a class="panel__item">
+              <img src="images/c3.png">
+            </a>
+          </div>
+        </div>
       </div>
-      <div class="col-10 box grid-five">
-        <a class="box__item" href="">
-          <img class="box__item__img" src="./images/more-test.jpg" alt="">
-          <span class="box__item__title">바비브라운 브랜드전</span>
-          <span class="box__item__content">완벽한 메이크업을 위한 뷰티템</span>
-          <span class="box__item__tag">테마</span>
-        </a>
-        <a class="box__item" href="">
-          <img class="box__item__img" src="./images/more-test.jpg" alt="">
-          <span class="box__item__title">바비브라운 브랜드전</span>
-          <span class="box__item__content">완벽한 메이크업을 위한 뷰티템</span>
-          <span class="box__item__tag">테마</span>
-        </a>
-        <a class="box__item" href="">
-          <img class="box__item__img" src="./images/more-test.jpg" alt="">
-          <span class="box__item__title">바비브라운 브랜드전</span>
-          <span class="box__item__content">완벽한 메이크업을 위한 뷰티템</span>
-          <span class="box__item__tag">테마</span>
-        </a>
-        <a class="box__item" href="">
-          <img class="box__item__img" src="./images/more-test.jpg" alt="">
-          <span class="box__item__title">바비브라운 브랜드전</span>
-          <span class="box__item__content">완벽한 메이크업을 위한 뷰티템</span>
-          <span class="box__item__tag">테마</span>
-        </a>
-        <a class="box__item" href="">
-          <img class="box__item__img" src="./images/more-test.jpg" alt="">
-          <span class="box__item__title">바비브라운 브랜드전</span>
-          <span class="box__item__content">완벽한 메이크업을 위한 뷰티템</span>
-          <span class="box__item__tag">테마</span>
-        </a>
+      <div class="col-10">
+        <div class="col-10 grid box">
+          <a class="box__item" href="">
+            <img class="box__item__img" src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20210222154513356_716799" alt="">
+            <span class="box__item__title">맛있어요.</span>
+            <span class="box__item__content">아침대용 구운도넛 20봉 외</span>
+            <span class="box__item__tag">테마</span>
+          </a>
+          <a class="box__item" href="">
+            <img class="box__item__img" src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20210115140738392_2355" alt="">
+            <span class="box__item__title">먹었으면 운동해야죠.</span>
+            <span class="box__item__content">다이어트 관리를 위한 체중계 모음</span>
+            <span class="box__item__tag">테마</span>
+          </a>
+          <a class="box__item" href="">
+            <img class="box__item__img" src="//shop1.daumcdn.net/thumb/R250x250/?fname=https%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FD5094239302.jpg%3Fut%3D20200601232313" alt="">
+            <span class="box__item__title">다이어트를 위한 착즙기</span>
+            <span class="box__item__content">3만원 이하 착즙기 모음</span>
+            <span class="box__item__tag">테마</span>
+          </a>
+          <a class="box__item" href="">
+            <img class="box__item__img" src="//shop2.daumcdn.net/thumb/R250x250/?fname=https%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FD5096601663.jpg%3Fut%3D20200703162742" alt="">
+            <span class="box__item__title">더치 커피는 0칼로리</span>
+            <span class="box__item__content">1만원 이하 더치커피 모음</span>
+            <span class="box__item__tag">테마</span>
+          </a>
+          <a class="box__item" href="">
+            <img class="box__item__img" src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20210222152040232_440720" alt="">
+            <span class="box__item__title">다이어트 했으면 먹어야죠.</span>
+            <span class="box__item__content">치팅데이에는 필수! 흑돼지 외</span>
+            <span class="box__item__tag">테마</span>
+          </a>
+        </div>
+        <div class="col-10 button-wrap">
+          <div class="more-button" id="moreBoxButton">
+            <span class="more-button__text">더보기</span>
+            <span class="more-button__count">
+              (<span id="viewBoxCount">5</span>/<span id="totalBoxCount">49</span>)</span>
+            <span class="more-button__arrow"></span>
+          </div>
+        </div>
       </div>
     </section>
-
+    <section class="col-10 box-section">
+      <h2 class="section-title">지금뜨는 테마 카테고리</h2>
+      <div class="col-10">
+        <div class="col-10 grid box">
+          <a class="box__item" href="">
+            <img class="box__item__img" src="./images/more-test.jpg" alt="">
+            <span class="box__item__title">도시적인 미니멀 스타일 킨더살몬</span>
+            <span class="box__item__content">깔끔한 데일리룩을 위한 브랜드</span>
+            <span class="box__item__tag">테마</span>
+          </a>
+          <a class="box__item" href="">
+            <img class="box__item__img" src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FW10820502125.jpg%3Fut%3D20201018174348&scode=talkgift" alt="">
+            <span class="box__item__title">3만원 미만 화상캠</span>
+            <span class="box__item__content">언택트 시대 필수품! 화상 웹캠</span>
+            <span class="box__item__tag">테마</span>
+          </a>
+          <a class="box__item" href="">
+            <img class="box__item__img" src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FW12080125312.jpg%3Fut%3D20210126062957&scode=talkgift" alt="">
+            <span class="box__item__title">매력 넘치는 브랜드 어프어프</span>
+            <span class="box__item__content">귀엽고 특이한 디자인으로 모아봤어요.</span>
+            <span class="box__item__tag">테마</span>
+          </a>
+          <a class="box__item" href="">
+            <img class="box__item__img" src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11823491111.jpg%3Fut%3D20210106074230&scode=talkgift" alt="">
+            <span class="box__item__title">클래식한 분위기, 라코스테</span>
+            <span class="box__item__content">남녀공용 라코스테 가디건 한눈에 모아보기</span>
+            <span class="box__item__tag">테마</span>
+          </a>
+          <a class="box__item" href="">
+            <img class="box__item__img" src="//shop1.daumcdn.net/shophow/c/image/content/set/ad8255/20210219151935378_56095" alt="">
+            <span class="box__item__title">반려동물 브랜드전</span>
+            <span class="box__item__content">건강한 반려동물을 위한 필수품</span>
+            <span class="box__item__tag">테마</span>
+          </a>
+        </div>
+      </div>   
+    </section>
   </main>
   <!-- <script src='main.js'></script> -->
 </body>
