--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
     </nav>
     <main>
       <div class="main__column banner">
-        <div class="banner__column">
+        <div class="banner__column banner-event">
           <div class="banner-event">
             <div class="banner-event__type">Best 100</div>
             <div class="banner-event__img">기본형</div>
@@ -94,12 +94,64 @@
         </div>
         <div class="banner__column">
           <ul class="event-item-list">
-            <li class="production event-item">
+            <li class="event-item">
               <a href="">
-                <div class="item-img">이미지</div>
-                <div class="item-title">아이템 제목</div>
-                <div class="item-info">아이템 info</div>
-                <div class="item-theme">아이템 테마</div>
+                <div class="item-img">
+                  <img
+                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                  />
+                </div>
+                <div class="item-title">지금은 신품종 전성시대</div>
+                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+                <div class="item-theme">테마</div>
+              </a>
+            </li>
+            <li class="event-item">
+              <a href="">
+                <div class="item-img">
+                  <img
+                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                  />
+                </div>
+                <div class="item-title">지금은 신품종 전성시대</div>
+                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+                <div class="item-theme">테마</div>
+              </a>
+            </li>
+            <li class="event-item">
+              <a href="">
+                <div class="item-img">
+                  <img
+                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                  />
+                </div>
+                <div class="item-title">지금은 신품종 전성시대</div>
+                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+                <div class="item-theme">테마</div>
+              </a>
+            </li>
+            <li class="event-item">
+              <a href="">
+                <div class="item-img">
+                  <img
+                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                  />
+                </div>
+                <div class="item-title">지금은 신품종 전성시대</div>
+                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+                <div class="item-theme">테마</div>
+              </a>
+            </li>
+            <li class="event-item">
+              <a href="">
+                <div class="item-img">
+                  <img
+                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                  />
+                </div>
+                <div class="item-title">지금은 신품종 전성시대</div>
+                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+                <div class="item-theme">테마</div>
               </a>
             </li>
           </ul>
@@ -108,12 +160,64 @@
       <div class="main__column hot-theme">
         <h3 class="hot-theme-title">품절주의! 역대급 핫딜</h3>
         <ul class="hot-theme-list">
-          <li class="production hot-theme-item">
+          <li class="hot-theme-item">
             <a href="">
-              <div class="item-img">이미지</div>
-              <div class="item-title">아이템 제목</div>
-              <div class="item-info">아이템 info</div>
-              <div class="item-theme">아이템 테마</div>
+              <div class="item-img">
+                <img
+                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                />
+              </div>
+              <div class="item-title">지금은 신품종 전성시대</div>
+              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+              <div class="item-theme">테마</div>
+            </a>
+          </li>
+          <li class="hot-theme-item">
+            <a href="">
+              <div class="item-img">
+                <img
+                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                />
+              </div>
+              <div class="item-title">지금은 신품종 전성시대</div>
+              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+              <div class="item-theme">테마</div>
+            </a>
+          </li>
+          <li class="hot-theme-item">
+            <a href="">
+              <div class="item-img">
+                <img
+                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                />
+              </div>
+              <div class="item-title">지금은 신품종 전성시대</div>
+              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+              <div class="item-theme">테마</div>
+            </a>
+          </li>
+          <li class="hot-theme-item">
+            <a href="">
+              <div class="item-img">
+                <img
+                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                />
+              </div>
+              <div class="item-title">지금은 신품종 전성시대</div>
+              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+              <div class="item-theme">테마</div>
+            </a>
+          </li>
+          <li class="hot-theme-item">
+            <a href="">
+              <div class="item-img">
+                <img
+                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                />
+              </div>
+              <div class="item-title">지금은 신품종 전성시대</div>
+              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+              <div class="item-theme">테마</div>
             </a>
           </li>
         </ul>
