--- a/shopping/public/index.html
+++ b/shopping/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./stylesheets/main.scss" />
+    <link rel="stylesheet" href="./stylesheets/style.scss" />
     <title>쇼핑하우 by kakaocommerce</title>
   </head>
 
@@ -62,24 +62,31 @@
       </section>
     </header>
     <main>
+      <div class="dividing-space"></div>
       <section class="main__article">
         <article class="article__top">
-          <h3>기획전 및 이벤트</h3>
+          <!-- <h3>기획전 및 이벤트</h3> -->
+          <!-- < class="event"> -->
           <div class="top__event">
-            <div class="event__item">
+            <div class="event event__item">
               <a href="">
                 <img src="https://shop4.daumcdn.net/shophow/sib/0_210219174849_FwZShCdZPYIPpJmvgEiGWverDgJVqrrq" alt="기획전 이벤트" />
               </a>
             </div>
-            <div class="event__slide">
+            <div class="event event__slide">
               <div class="slide_event">
                 <div class="slide">
-                  <div class="panel"></div>
+                  <div class="panel">
+                    <a href="">
+                      <img src="https://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" alt="" />
+                    </a>
+                  </div>
                   <div class="panel"></div>
                   <div class="panel"></div>
                 </div>
               </div>
               <div class="paging_comm">
+                <button class="btn_slide btn_prev"><i class="fas fa-chevron-left"></i></button>
                 <span class="inner_paging">
                   <span class="btn_paging" data-index="0">
                     <span class="num_page"></span>
@@ -91,7 +98,6 @@
                     <span class="num_page"></span>
                   </span>
                 </span>
-                <button class="btn_slide btn_prev"><i class="fas fa-chevron-left"></i></button>
                 <button class="btn_slide btn_next"><i class="fas fa-chevron-right"></i></button>
               </div>
             </div>
@@ -114,46 +120,46 @@
                     <li class="_GI_">
                       <a href="">
                         <span class="info_thumb">
-                          <img src="" alt="" />
+                          <img src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP9810509204.jpg%3Fut%3D20200702012320&scode=talkgift" alt="" />
                         </span>
-                        <strong class="title_g"></strong>
-                        <span class="txt_info"></span>
-                        <span class="ico_comm2 ico_theme"></span>
+                        <strong class="title_g">영롱하게 빛나는 자개 보석함</strong>
+                        <span class="txt_info">그냥 두기만 해도 아름답게 빛나죠</span>
+                        <span class="ico_comm2 ico_theme">테마</span>
                       </a>
                     </li>
                     <li class="_GI_">
                       <a href="">
                         <span class="info_thumb">
-                          <img src="" alt="" />
+                          <img src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FF11847141813.jpg%3Fut%3D20210108051340&scode=talkgift" alt="" />
                         </span>
-                        <strong class="title_g"></strong>
-                        <span class="txt_info"></span>
-                        <span class="ico_comm2 ico_theme"></span>
+                        <strong class="title_g">오찌 브랜드 잡화 모음</strong>
+                        <span class="txt_info">편한 신발부터 멋스러운 모자까지</span>
+                        <span class="ico_comm2 ico_theme">테마</span>
                       </a>
                     </li>
                     <li class="_GI_">
                       <a href="">
                         <span class="info_thumb">
-                          <img src="" alt="" />
+                          <img src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FR9281523523.jpg%3Fut%3D20200502205541&scode=talkgift" alt="" />
                         </span>
-                        <strong class="title_g"></strong>
-                        <span class="txt_info"></span>
-                        <span class="ico_comm2 ico_theme"></span>
+                        <strong class="title_g">안정적인 그립감의 핸들 커버</strong>
+                        <span class="txt_info">스타일리시함까지 갖춘 차량 아이템</span>
+                        <span class="ico_comm2 ico_theme">테마</span>
                       </a>
                     </li>
-                    <li class="_GI_">
+                    <li class="_GI_ last">
                       <a href="">
                         <span class="info_thumb">
-                          <img src="" alt="" />
+                          <img src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FG11290107196.jpg%3Fut%3D20201125081850&scode=talkgift" alt="" />
                         </span>
-                        <strong class="title_g"></strong>
-                        <span class="txt_info"></span>
-                        <span class="ico_comm2 ico_theme"></span>
+                        <strong class="title_g">단정하지만 우아한 스타일,...</strong>
+                        <span class="txt_info">디렉터 크리스토퍼 르메르 컬렉션</span>
+                        <span class="ico_comm2 ico_theme">테마</span>
                       </a>
                     </li>
                   </ul>
                 </div>
-                <div class="panel">
+                <div class="panel none">
                   <ul class="list_item">
                     <li class="_GI_">
                       <a href="">
@@ -207,7 +213,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="panel">
+                <div class="panel none">
                   <ul class="list_item">
                     <li class="_GI_">
                       <a href="">
@@ -266,6 +272,7 @@
               <button class="btn_g btn_next"><i class="fas fa-chevron-right"></i></button>
             </div>
           </div>
+          <!-- </> -->
         </article>
         <article class="article__hotDeal">
           <div class="section__hotDeal">
