Add. slide-event-button HTML,style

--- a/public/index.html
+++ b/public/index.html
@@ -77,22 +77,39 @@
       </div>
     </nav>
     <main>
-      <div class="main__column banner">
-        <div class="banner__column banner-event">
+      <div class="banner">
+        <div class="banner__column banner__main-event">
           <div class="banner-event">
-            <div class="banner-event__type">Best 100</div>
-            <div class="banner-event__img">기본형</div>
-            <div class="banner-event__title">홈인테리어 베스트</div>
-            <div class="banner-event__info">~~~~</div>
+            <div class="banner-event-item">
+              <img src="https://shop4.daumcdn.net/shophow/sib/0_210219174900_cCDgZtbAhPiBQqcJamsODOWNoVrXILeM" />
+            </div>
           </div>
           <div class="banner-list slide">
-            <div class="banner-item__type">Best 100</div>
-            <div class="banner-item__img">슬라이드</div>
-            <div class="banner-item__title">홈인테리어 베스트</div>
-            <div class="banner-item__info">~~~~</div>
+            <div class="slide-list">
+              <!-- <div class="slice-item">
+                <img src="https://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" />
+              </div> -->
+              <div class="slice-item">
+                <img src="https://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" />
+              </div>
+              <!-- <div class="slice-item">
+                <img src="https://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" />
+              </div> -->
+            </div>
+            <div class="slide-event">
+              <div class="slide-event__btn">
+                <div class="btn-prev" tabindex="-1"><i class="fas fa-chevron-left"></i></div>
+                <div class="btn-next" tabindex="-1"><i class="fas fa-chevron-right"></i></div>
+              </div>
+              <div class="slide-event__paging">
+                <div class="btn-paging paging-first" data-index="0"></div>
+                <div class="btn-paging" data-index="1"></div>
+                <div class="btn-paging" data-index="2"></div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="banner__column">
+        <div class="banner__column"></div>
           <ul class="event-item-list">
             <li class="event-item">
               <a href="">
@@ -157,7 +174,7 @@
           </ul>
         </div>
       </div>
-      <div class="main__column hot-theme">
+      <div class="hot-theme">
         <h3 class="hot-theme-title">품절주의! 역대급 핫딜</h3>
         <ul class="hot-theme-list">
           <li class="hot-theme-item">
