--- a/public/index.html
+++ b/public/index.html
@@ -174,6 +174,13 @@
           </ul>
         </div>
       </div>
+      <div class="banner-more">
+        <div class="more-text-container">
+          <span>더보기</span>
+          <span class='text-index'>(1/276건)</span>
+          <span><i class="fas fa-angle-down"></i></span>
+        </div>
+      </div>
       <div class="hot-theme">
         <h3 class="hot-theme-title">품절주의! 역대급 핫딜</h3>
         <ul class="hot-theme-list">
