[Create] json-fetch
- json response를 받아와 뿌리는 작업 시도
- html 태크 안에 삽입 시도
- 일단 되는 것 같음..

--- a/shopping/public/index.html
+++ b/shopping/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./stylesheets/style.scss" />
+    <script defer src="./javascripts/main.js"></script>
     <title>쇼핑하우 by kakaocommerce</title>
   </head>
 
@@ -102,9 +103,9 @@
               </div>
             </div>
           </div>
-          <div class="top__event-list">
-            <div class="event-list__slide">
-              <div class="slide">
+          <div id="mallEventList" class="top__event-list">
+            <div id="mallEventListSlide" class="event-list__slide">
+              <div id="mallEventSlide" class="slide">
                 <div class="panel">
                   <ul class="list_item">
                     <li class="_GI_">
