--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shoppinghow Clone</title>
+    <link rel="stylesheet" href="/dist/css/style.bundle.css" />
   </head>
   <body>
-    <h1>Hello world~</h1>
+    <div class="app">
+      
+    </div>
+    <!-- HTML파일 위치 기준이 아니라 server.js에서 설정한 default 위치를 기준으로 -->
+    <script src="/src/js/main.js" type="module"></script>
   </body>
 </html>
