[Update] slide - carousel
- carousel 시도중
    - 현재는 js에서 style에 바로 접근하고 있는데, class로 넣고 빼는 식으로 수정할 예정
    - 현재 슬라이드가 아닌 것들은 없어져야 하는데.. html 구조를 잘못 짠거같음

--- a/shopping/public/index.html
+++ b/shopping/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./stylesheets/style.scss" />
     <script defer src="./javascripts/main.js"></script>
+    <script defer src="./javascripts/slide.js"></script>
     <title>쇼핑하우 by kakaocommerce</title>
   </head>
 
@@ -76,14 +77,22 @@
             </div>
             <div class="event event__slide">
               <div class="slide_event">
-                <div class="slide">
+                <div class="slide slide_list">
                   <div class="panel">
                     <a href="">
-                      <img src="https://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" alt="" />
+                      <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD" alt="" />
                     </a>
                   </div>
-                  <div class="panel"></div>
-                  <div class="panel"></div>
+                  <div class="panel hidden">
+                    <a href="">
+                      <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" alt="" />
+                    </a>
+                  </div>
+                  <div class="panel hidden">
+                    <a href="">
+                      <img src="http://shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj" alt="" />
+                    </a>
+                  </div>
                 </div>
               </div>
               <div class="paging_comm">
@@ -106,7 +115,7 @@
           <div id="mallEventList" class="top__event-list">
             <div id="mallEventListSlide" class="event-list__slide">
               <div id="mallEventSlide" class="slide">
-                <div class="panel">
+                <!-- <div class="panel">
                   <ul class="list_item">
                     <li class="_GI_">
                       <a href="">
@@ -267,7 +276,7 @@
                       </a>
                     </li>
                   </ul>
-                </div>
+                </div>-->
               </div>
               <button class="btn_g btn_prev"><i class="fas fa-chevron-left"></i></button>
               <button class="btn_g btn_next"><i class="fas fa-chevron-right"></i></button>
