--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,14 @@
 </head>
 <body>
     <header>
-        <div class="header__logo">
-            <img src="images/kakocommerce.png" alt="" class="logo__img">
-        </div>
-        <div class="header__input">
-            <input type="text" class="main__input">
+        <div class="front">
+            <div class="front__logo">
+                <img src="images/kakocommerce.png" alt="" class="logo__img">
+            </div>
+            <div class="front__input-box">
+                <input type="text" placeholder="4 소파패드" class="input-box__input">
+                <div class="input-box__icon"><i class="fas fa-search"></i></div>
+            </div>
         </div>
         <nav>
             <div class="nav__category">
