[Add] Insert responsed json data into carousel
- main.js
    - 캐러셀에 json data 넣기 진행
    - fetch하고 비동기로 받으니까, json data를 받아와 html 태그를 생성하여 innerHtml로 넣은 후 캐러셀을 조작해야 한다는 것은 알겠는데, 코드가 너무 길어짐
    - 현재 캐러셀 부분을 class로 객체화하거나 따로 분리해서 import할 수 있는 형식으로 만들어야 할 것 같은데 아무 아이디어도 떠오르지 않음.. ㅜㅜ

--- a/shopping/public/index.html
+++ b/shopping/public/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./stylesheets/style.scss" />
-    <script defer src="./javascripts/main.js"></script>
-    <script defer src="./javascripts/slide.js"></script>
+    <script defer type="module" src="./javascripts/main.js"></script>
     <title>쇼핑하우 by kakaocommerce</title>
   </head>
 
@@ -78,21 +77,21 @@
             <div class="event event__slide">
               <div class="slide_event">
                 <div class="slide slide_list">
-                  <div class="panel">
+                  <!-- <div class="panel">
                     <a href="">
                       <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD" alt="" />
                     </a>
                   </div>
-                  <div class="panel hidden">
+                  <div class="panel">
                     <a href="">
                       <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" alt="" />
                     </a>
                   </div>
-                  <div class="panel hidden">
+                  <div class="panel">
                     <a href="">
                       <img src="http://shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj" alt="" />
                     </a>
-                  </div>
+                  </div> -->
                 </div>
               </div>
               <div class="paging_comm">
