캐러셀 임시 작업

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <img src="images/c1.png">
             </a>
             <a class="panel__item">
-              <img src="images/c2.png">
+              <img class="active" src="images/c2.png">
             </a>
             <a class="panel__item">
               <img src="images/c3.png">
@@ -68,9 +68,9 @@
             <div class="paging-arrow__right" data-arrow="next"></div>
           </div>
           <div class="paging-hover" id="pagingHover">
-            <div class="paging-hover__button" data-index="0"></div>
-            <div class="paging-hover__button" data-index="1"></div>
+            <div class="paging-hover__button active" data-index="1"></div>
             <div class="paging-hover__button" data-index="2"></div>
+            <div class="paging-hover__button" data-index="0"></div>
           </div>
         </div>
       </div>
