--- a/shopping/public/index.html
+++ b/shopping/public/index.html
@@ -76,23 +76,7 @@
             </div>
             <div class="event event__slide">
               <div class="slide_event">
-                <div class="slide slide_list">
-                  <!-- <div class="panel">
-                    <a href="">
-                      <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD" alt="" />
-                    </a>
-                  </div>
-                  <div class="panel">
-                    <a href="">
-                      <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" alt="" />
-                    </a>
-                  </div>
-                  <div class="panel">
-                    <a href="">
-                      <img src="http://shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj" alt="" />
-                    </a>
-                  </div> -->
-                </div>
+                <div class="slide slide_list"></div>
               </div>
               <div class="paging_comm">
                 <button class="btn_slide btn_prev"><i class="fas fa-chevron-left"></i></button>
@@ -113,170 +97,7 @@
           </div>
           <div id="mallEventList" class="top__event-list">
             <div id="mallEventListSlide" class="event-list__slide">
-              <div id="mallEventSlide" class="slide">
-                <!-- <div class="panel">
-                  <ul class="list_item">
-                    <li class="_GI_">
-                      <a href="">
-                        <span class="info_thumb">
-                          <img src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FW10820502125.jpg%3Fut%3D20201018174348&scode=talkgift" alt="" />
-                        </span>
-                        <strong class="title_g">3만원 미만 화상캠</strong>
-                        <span class="txt_info">언택트 시대 필수품! 화상 웹캡</span>
-                        <span class="ico_comm2 ico_theme">테마</span>
-                      </a>
-                    </li>
-                    <li class="_GI_">
-                      <a href="">
-                        <span class="info_thumb">
-                          <img src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FP9810509204.jpg%3Fut%3D20200702012320&scode=talkgift" alt="" />
-                        </span>
-                        <strong class="title_g">영롱하게 빛나는 자개 보석함</strong>
-                        <span class="txt_info">그냥 두기만 해도 아름답게 빛나죠</span>
-                        <span class="ico_comm2 ico_theme">테마</span>
-                      </a>
-                    </li>
-                    <li class="_GI_">
-                      <a href="">
-                        <span class="info_thumb">
-                          <img src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FF11847141813.jpg%3Fut%3D20210108051340&scode=talkgift" alt="" />
-                        </span>
-                        <strong class="title_g">오찌 브랜드 잡화 모음</strong>
-                        <span class="txt_info">편한 신발부터 멋스러운 모자까지</span>
-                        <span class="ico_comm2 ico_theme">테마</span>
-                      </a>
-                    </li>
-                    <li class="_GI_">
-                      <a href="">
-                        <span class="info_thumb">
-                          <img src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FR9281523523.jpg%3Fut%3D20200502205541&scode=talkgift" alt="" />
-                        </span>
-                        <strong class="title_g">안정적인 그립감의 핸들 커버</strong>
-                        <span class="txt_info">스타일리시함까지 갖춘 차량 아이템</span>
-                        <span class="ico_comm2 ico_theme">테마</span>
-                      </a>
-                    </li>
-                    <li class="_GI_ last">
-                      <a href="">
-                        <span class="info_thumb">
-                          <img src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FG11290107196.jpg%3Fut%3D20201125081850&scode=talkgift" alt="" />
-                        </span>
-                        <strong class="title_g">단정하지만 우아한 스타일,...</strong>
-                        <span class="txt_info">디렉터 크리스토퍼 르메르 컬렉션</span>
-                        <span class="ico_comm2 ico_theme">테마</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="panel none">
-                  <ul class="list_item">
-                    <li class="_GI_">
-                      <a href="">
-                        <span class="info_thumb">
-                          <img src="" alt="" />
-                        </span>
-                        <strong class="title_g"></strong>
-                        <span class="txt_info"></span>
-                        <span class="ico_comm2 ico_theme"></span>
-                      </a>
-                    </li>
-                    <li class="_GI_">
-                      <a href="">
-                        <span class="info_thumb">
-                          <img src="" alt="" />
-                        </span>
-                        <strong class="title_g"></strong>
-                        <span class="txt_info"></span>
-                        <span class="ico_comm2 ico_theme"></span>
-                      </a>
-                    </li>
-                    <li class="_GI_">
-                      <a href="">
-                        <span class="info_thumb">
-                          <img src="" alt="" />
-                        </span>
-                        <strong class="title_g"></strong>
-                        <span class="txt_info"></span>
-                        <span class="ico_comm2 ico_theme"></span>
-                      </a>
-                    </li>
-                    <li class="_GI_">
-                      <a href="">
-                        <span class="info_thumb">
-                          <img src="" alt="" />
-                        </span>
-                        <strong class="title_g"></strong>
-                        <span class="txt_info"></span>
-                        <span class="ico_comm2 ico_theme"></span>
-                      </a>
-                    </li>
-                    <li class="_GI_">
-                      <a href="">
-                        <span class="info_thumb">
-                          <img src="" alt="" />
-                        </span>
-                        <strong class="title_g"></strong>
-                        <span class="txt_info"></span>
-                        <span class="ico_comm2 ico_theme"></span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="panel none">
-                  <ul class="list_item">
-                    <li class="_GI_">
-                      <a href="">
-                        <span class="info_thumb">
-                          <img src="" alt="" />
-                        </span>
-                        <strong class="title_g"></strong>
-                        <span class="txt_info"></span>
-                        <span class="ico_comm2 ico_theme"></span>
-                      </a>
-                    </li>
-                    <li class="_GI_">
-                      <a href="">
-                        <span class="info_thumb">
-                          <img src="" alt="" />
-                        </span>
-                        <strong class="title_g"></strong>
-                        <span class="txt_info"></span>
-                        <span class="ico_comm2 ico_theme"></span>
-                      </a>
-                    </li>
-                    <li class="_GI_">
-                      <a href="">
-                        <span class="info_thumb">
-                          <img src="" alt="" />
-                        </span>
-                        <strong class="title_g"></strong>
-                        <span class="txt_info"></span>
-                        <span class="ico_comm2 ico_theme"></span>
-                      </a>
-                    </li>
-                    <li class="_GI_">
-                      <a href="">
-                        <span class="info_thumb">
-                          <img src="" alt="" />
-                        </span>
-                        <strong class="title_g"></strong>
-                        <span class="txt_info"></span>
-                        <span class="ico_comm2 ico_theme"></span>
-                      </a>
-                    </li>
-                    <li class="_GI_">
-                      <a href="">
-                        <span class="info_thumb">
-                          <img src="" alt="" />
-                        </span>
-                        <strong class="title_g"></strong>
-                        <span class="txt_info"></span>
-                        <span class="ico_comm2 ico_theme"></span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>-->
-              </div>
+              <div id="mallEventSlide" class="slide"></div>
               <button class="btn_g btn_prev"><i class="fas fa-chevron-left"></i></button>
               <button class="btn_g btn_next"><i class="fas fa-chevron-right"></i></button>
             </div>
