--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,6 @@
             </div>
           </div>
         </div>
-        <div class="banner__column"></div>
         <ul class="event-item-list">
           <li class="event-item">
             <a href="">
@@ -249,5 +248,6 @@
         </ul>
       </div>
     </main>
+    <script src="src/js/main.js"></script>
   </body>
 </html>
