--- a/public/index.html
+++ b/public/index.html
@@ -85,8 +85,8 @@
             </div>
           </div>
           <div class="banner-list slide">
-            <div class="slide-list">
-              <div class="slide-item__wrapper">
+            <div class="slide-list__wrapper">
+              <div class="slide-list">
                 <div class="slide-item">
                   <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD" />
                 </div>
